--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -2162,7 +2162,7 @@ steps:
           +                /// Bg with fill and outline
           +                Container(
           +                  decoration: BoxDecoration(
-          +                    color: const Color(0xFF00D1FF).withOpacity(.1),
+          +                    color: const Color(0xFF00D1FF).withAlpha(25),
           +                    border: Border.all(color: Colors.white, width: 5),
           +                  ),
           +                ),
@@ -2170,7 +2170,7 @@ steps:
           +                if (state.isHovered || state.isFocused) ...[
           +                  Container(
           +                    decoration: BoxDecoration(
-          +                      color: const Color(0xFF00D1FF).withOpacity(.1),
+          +                      color: const Color(0xFF00D1FF).withAlpha(25),
           +                    ),
           +                  ),
           +                ],
@@ -2587,7 +2587,7 @@ steps:
                            /// Bg with fill and outline
           -                Container(
           -                  decoration: BoxDecoration(
-          -                    color: const Color(0xFF00D1FF).withOpacity(.1),
+          -                    color: const Color(0xFF00D1FF).withAlpha(25),
           -                    border: Border.all(color: Colors.white, width: 5),
           +                AnimatedOpacity(
           +                  opacity: (!selected && (state.isHovered || state.isFocused))
@@ -2596,7 +2596,7 @@ steps:
           +                  duration: .3.seconds,
           +                  child: Container(
           +                    decoration: BoxDecoration(
-          +                      color: const Color(0xFF00D1FF).withOpacity(.1),
+          +                      color: const Color(0xFF00D1FF).withAlpha(25),
           +                      border: Border.all(color: Colors.white, width: 5),
           +                    ),
                              ),
@@ -3360,7 +3360,7 @@ steps:
                       scale: p.scale * 1.025,
                       vx: p.vx * 1.025,
                       vy: p.vy * 1.025,
-                      color: color.withOpacity(p.lifespan * 0.001 + 0.01),
+                      color: color.withAlpha((p.lifespan * 0.255 + 2.55).ceil()),
                       lifespan: p.lifespan - 1,
                     );
                   }
