--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -12487,7 +12487,7 @@ steps:
                     center,
                     center + (player.dragDelta * -1).toOffset(),
                     Paint()
-                      ..color = Colors.orange.withOpacity(0.7)
+                      ..color = Colors.orange.withAlpha(180)
                       ..strokeWidth = 0.4
                       ..strokeCap = StrokeCap.round);
               }
