Revert "`next-gen-ui` part #2"
This reverts commit 37e74be3313d337b0bd92f583fab7545f33554f3.

--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -1452,7 +1452,13 @@ steps:
             void paint(Canvas canvas, Size size) {
               double fov = v64.mix(pi / 4.3, pi / 2.0, config.zoom.clamp(0.0, 1.0));
 
-              v64.Vector3 colorToVector3(Color c) => v64.Vector3(c.r, c.g, c.b);
+              v64.Vector3 colorToVector3(Color c) =>
+                  v64.Vector3(
+                    c.red.toDouble(),
+                    c.green.toDouble(),
+                    c.blue.toDouble(),
+                  ) /
+                  255.0;
 
               v64.Vector3 lightLumP = colorToVector3(config.lightColor).normalized() *
                   max(0.0, config.lightBrightness);
