--- a/forge2d_game/step_03/pubspec.yaml
+++ b/forge2d_game/step_03/pubspec.yaml
@@ -10,15 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   characters: ^1.3.0
-  flame: ^1.19.0
-  flame_forge2d: ^0.18.2
-  flame_kenney_xml: ^0.1.1
+  flame: ^1.20.0
+  flame_forge2d: ^0.18.2+1
+  flame_kenney_xml: ^0.1.1+1
   xml: ^6.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
