--- a/ffigen_codelab/step_07/android/build.gradle
+++ b/ffigen_codelab/step_07/android/build.gradle
@@ -25,7 +25,9 @@ rootProject.allprojects {
 apply plugin: "com.android.library"
 
 android {
-    namespace = "com.example.ffigen_app"
+    if (project.android.hasProperty("namespace")) {
+        namespace = "com.example.ffigen_app"
+    }
 
     // Bumping the plugin compileSdk version requires all clients of this plugin
     // to bump the version in their app.
@@ -53,8 +55,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
