--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -1452,13 +1452,7 @@ steps:
             void paint(Canvas canvas, Size size) {
               double fov = v64.mix(pi / 4.3, pi / 2.0, config.zoom.clamp(0.0, 1.0));
 
-              v64.Vector3 colorToVector3(Color c) =>
-                  v64.Vector3(
-                    c.red.toDouble(),
-                    c.green.toDouble(),
-                    c.blue.toDouble(),
-                  ) /
-                  255.0;
+              v64.Vector3 colorToVector3(Color c) => v64.Vector3(c.r, c.g, c.b);
 
               v64.Vector3 lightLumP = colorToVector3(config.lightColor).normalized() *
                   max(0.0, config.lightBrightness);
@@ -1666,6 +1660,15 @@ steps:
       - name: Build Web app
         path: next_gen_ui
         flutter: build web
+      - name: Build iOS app
+        path: next_gen_ui
+        flutter: build ios --simulator
+      - name: Build Android app
+        path: next_gen_ui
+        flutter: build apk
+      - name: Build macOS app
+        path: next_gen_ui
+        flutter: build macos
       - name: Copy to step_01
         copydir:
           from: next_gen_ui 
@@ -3400,6 +3403,15 @@ steps:
       - name: Build Web app
         path: next_gen_ui
         flutter: build web
+      - name: Build iOS app
+        path: next_gen_ui
+        flutter: build ios --simulator
+      - name: Build Android app
+        path: next_gen_ui
+        flutter: build apk
+      - name: Build macOS app
+        path: next_gen_ui
+        flutter: build macos
       - name: Copy to step_06
         copydir:
           from: next_gen_ui 
