--- a/webview_flutter/codelab_rebuild.yaml
+++ b/webview_flutter/codelab_rebuild.yaml
@@ -52,7 +52,7 @@ steps:
                    // You can update the following values to match your application needs.
                    // For more information, see: https://flutter.dev/to/review-gradle-config.
           -        minSdk = flutter.minSdkVersion
-          +        minSdk = 20
+          +        minSdk = 21
                    targetSdk = flutter.targetSdkVersion
                    versionCode = flutter.versionCode
                    versionName = flutter.versionName
@@ -60,6 +60,10 @@ steps:
         platforms: [ macos ]
         path: webview_in_flutter
         flutter: build ios --simulator
+      - name: Build Android
+        platforms: [ macos ]
+        path: webview_in_flutter
+        flutter: build apk
       - name: Copy step_03
         copydir:
           from: webview_in_flutter
