--- a/firebase-get-to-know-flutter/codelab_rebuild.yaml
+++ b/firebase-get-to-know-flutter/codelab_rebuild.yaml
@@ -2166,6 +2166,12 @@ steps:
                 ),
               );
             }
+          
+            @override
+            void dispose() {
+              _controller.dispose();
+              super.dispose();
+            }
           }
       - name: Patch lib/home_page.dart
         path: gtk_flutter/lib/home_page.dart
