feat: configuration aplication flutter

--- a/firebase-auth-flutterfire-ui/start/firebase.json
+++ b/firebase-auth-flutterfire-ui/start/firebase.json
@@ -1,4 +1,7 @@
 {
+  "projects": {
+    "default": "flutterfire-ui-codelab"
+  },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
