--- a/animations/codelab_rebuild.yaml
+++ b/animations/codelab_rebuild.yaml
@@ -1326,6 +1326,9 @@ steps:
                  ),
                );
              }
+      - name: dart analyze
+        path: quiz
+        dart: analyze --fatal-infos
       - name: Build Android app
         platforms: [ macos ]
         path: quiz
