--- a/animations/codelab_rebuild.yaml
+++ b/animations/codelab_rebuild.yaml
@@ -38,13 +38,17 @@ steps:
         replace-contents: |
           include: package:flutter_lints/flutter.yaml
 
+          analyzer:
+            errors:
+              unused_field: ignore
+
           linter:
             rules:
+              annotate_overrides: false
               prefer_const_constructors: false
               prefer_const_constructors_in_immutables: false
               prefer_const_declarations: false
               prefer_const_literals_to_create_immutables: false
-              annotate_overrides: false
       - name: Create the HomeScreen
         path: quiz/lib/home_screen.dart
         replace-contents: |
