--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -128,31 +128,31 @@ steps:
           // found in the LICENSE file.
 
           import 'dart:async';
-          
+
           import 'package:flame/components.dart';
           import 'package:flame/game.dart';
-          
+
           import 'components/components.dart';
           import 'config.dart';
-          
+
           class BrickBreaker extends FlameGame {
             BrickBreaker()
-                : super(
-                    camera: CameraComponent.withFixedResolution(
-                      width: gameWidth,
-                      height: gameHeight,
-                    ),
-                  );
-          
+              : super(
+                  camera: CameraComponent.withFixedResolution(
+                    width: gameWidth,
+                    height: gameHeight,
+                  ),
+                );
+
             double get width => size.x;
             double get height => size.y;
-          
+
             @override
             FutureOr<void> onLoad() async {
               super.onLoad();
-          
+
               camera.viewfinder.anchor = Anchor.topLeft;
-          
+
               world.add(PlayArea());
             }
           }
@@ -183,18 +183,15 @@ steps:
           // found in the LICENSE file.
 
           import 'dart:async';
-          
+
           import 'package:flame/components.dart';
           import 'package:flutter/material.dart';
-          
+
           import '../brick_breaker.dart';
-          
+
           class PlayArea extends RectangleComponent with HasGameReference<BrickBreaker> {
-            PlayArea()
-                : super(
-                    paint: Paint()..color = const Color(0xfff2e8cf),
-                  );
-          
+            PlayArea() : super(paint: Paint()..color = const Color(0xfff2e8cf));
+
             @override
             FutureOr<void> onLoad() async {
               super.onLoad();
@@ -226,24 +223,30 @@ steps:
            import 'package:flame/components.dart';
            import 'package:flame/game.dart';
           @@ -19,6 +20,7 @@ class BrickBreaker extends FlameGame {
-                     ),
-                   );
+                   ),
+                 );
            
           +  final rand = math.Random();
              double get width => size.x;
              double get height => size.y;
            
-          @@ -29,5 +31,14 @@ class BrickBreaker extends FlameGame {
+          @@ -29,5 +31,20 @@ class BrickBreaker extends FlameGame {
                camera.viewfinder.anchor = Anchor.topLeft;
            
                world.add(PlayArea());
           +
-          +    world.add(Ball(
+          +    world.add(
+          +      Ball(
           +        radius: ballRadius,
           +        position: size / 2,
-          +        velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)
-          +            .normalized()
-          +          ..scale(height / 4)));
+          +        velocity:
+          +            Vector2(
+          +                (rand.nextDouble() - 0.5) * width,
+          +                height * 0.2,
+          +              ).normalized()
+          +              ..scale(height / 4),
+          +      ),
+          +    );
           +
           +    debugMode = true;
              }
@@ -278,21 +281,23 @@ steps:
 
           import 'package:flame/components.dart';
           import 'package:flutter/material.dart';
-          
+
           class Ball extends CircleComponent {
             Ball({
               required this.velocity,
               required super.position,
               required double radius,
             }) : super(
-                      radius: radius,
-                      anchor: Anchor.center,
-                      paint: Paint()
+                  radius: radius,
+                  anchor: Anchor.center,
+                  paint:
+                      Paint()
                         ..color = const Color(0xff1e6091)
-                        ..style = PaintingStyle.fill);
-          
+                        ..style = PaintingStyle.fill,
+                );
+
             final Vector2 velocity;
-          
+
             @override
             void update(double dt) {
               super.update(dt);
@@ -322,8 +327,8 @@ steps:
           -class BrickBreaker extends FlameGame {
           +class BrickBreaker extends FlameGame with HasCollisionDetection {
              BrickBreaker()
-                 : super(
-                     camera: CameraComponent.withFixedResolution(
+               : super(
+                   camera: CameraComponent.withFixedResolution(
       - name: Patch lib/src/components/ball.dart
         path: brick_breaker/lib/src/components/ball.dart
         patch-u: |
@@ -346,24 +351,24 @@ steps:
              Ball({
                required this.velocity,
                required super.position,
-          @@ -15,7 +20,8 @@ class Ball extends CircleComponent {
-                       anchor: Anchor.center,
-                       paint: Paint()
-                         ..color = const Color(0xff1e6091)
-          -              ..style = PaintingStyle.fill);
-          +              ..style = PaintingStyle.fill,
-          +            children: [CircleHitbox()]);
+          @@ -17,6 +22,7 @@ class Ball extends CircleComponent {
+                        Paint()
+                          ..color = const Color(0xff1e6091)
+                          ..style = PaintingStyle.fill,
+          +         children: [CircleHitbox()],
+                  );
            
              final Vector2 velocity;
-           
-          @@ -24,4 +30,23 @@ class Ball extends CircleComponent {
+          @@ -26,4 +32,25 @@ class Ball extends CircleComponent {
                super.update(dt);
                position += velocity * dt;
              }
           +
           +  @override
           +  void onCollisionStart(
-          +      Set<Vector2> intersectionPoints, PositionComponent other) {
+          +    Set<Vector2> intersectionPoints,
+          +    PositionComponent other,
+          +  ) {
           +    super.onCollisionStart(intersectionPoints, other);
           +    if (other is PlayArea) {
           +      if (intersectionPoints.first.y <= 0) {
@@ -385,7 +390,7 @@ steps:
         patch-u: |
           --- b/brick_breaker/step_06/lib/src/components/play_area.dart
           +++ a/brick_breaker/step_06/lib/src/components/play_area.dart
-          @@ -4,6 +4,7 @@
+          @@ -4,13 +4,18 @@
            
            import 'dart:async';
            
@@ -393,14 +398,18 @@ steps:
            import 'package:flame/components.dart';
            import 'package:flutter/material.dart';
            
-          @@ -13,6 +14,7 @@ class PlayArea extends RectangleComponent with HasGameReference<BrickBreaker> {
-             PlayArea()
-                 : super(
-                     paint: Paint()..color = const Color(0xfff2e8cf),
-          +          children: [RectangleHitbox()],
-                   );
+           import '../brick_breaker.dart';
+           
+           class PlayArea extends RectangleComponent with HasGameReference<BrickBreaker> {
+          -  PlayArea() : super(paint: Paint()..color = const Color(0xfff2e8cf));
+          +  PlayArea()
+          +    : super(
+          +        paint: Paint()..color = const Color(0xfff2e8cf),
+          +        children: [RectangleHitbox()],
+          +      );
            
              @override
+             FutureOr<void> onLoad() async {
       - name: Copy step_06
         copydir:
           from: brick_breaker
@@ -433,23 +442,28 @@ steps:
           +class BrickBreaker extends FlameGame
           +    with HasCollisionDetection, KeyboardEvents {
              BrickBreaker()
-                 : super(
-                     camera: CameraComponent.withFixedResolution(
-          @@ -39,6 +43,24 @@ class BrickBreaker extends FlameGame with HasCollisionDetection {
-                       .normalized()
-                     ..scale(height / 4)));
+               : super(
+                   camera: CameraComponent.withFixedResolution(
+          @@ -45,6 +49,29 @@ class BrickBreaker extends FlameGame with HasCollisionDetection {
+                 ),
+               );
            
-          +    world.add(Bat(
+          +    world.add(
+          +      Bat(
           +        size: Vector2(batWidth, batHeight),
           +        cornerRadius: const Radius.circular(ballRadius / 2),
-          +        position: Vector2(width / 2, height * 0.95)));
+          +        position: Vector2(width / 2, height * 0.95),
+          +      ),
+          +    );
           +
                debugMode = true;
              }
           +
           +  @override
           +  KeyEventResult onKeyEvent(
-          +      KeyEvent event, Set<LogicalKeyboardKey> keysPressed) {
+          +    KeyEvent event,
+          +    Set<LogicalKeyboardKey> keysPressed,
+          +  ) {
           +    super.onKeyEvent(event, keysPressed);
           +    switch (event.logicalKey) {
           +      case LogicalKeyboardKey.arrowLeft:
@@ -489,18 +503,17 @@ steps:
            import 'play_area.dart';
            
            class Ball extends CircleComponent
-          @@ -43,8 +45,14 @@ class Ball extends CircleComponent
+          @@ -47,8 +49,13 @@ class Ball extends CircleComponent
                  } else if (intersectionPoints.first.x >= game.width) {
                    velocity.x = -velocity.x;
                  } else if (intersectionPoints.first.y >= game.height) {
           -        removeFromParent();
-          +        add(RemoveEffect(
-          +          delay: 0.35,
-          +        ));
+          +        add(RemoveEffect(delay: 0.35));
                  }
           +    } else if (other is Bat) {
           +      velocity.y = -velocity.y;
-          +      velocity.x = velocity.x +
+          +      velocity.x =
+          +          velocity.x +
           +          (position.x - other.position.x) / other.size.x * game.width * 0.3;
                } else {
                  debugPrint('collision with $other');
@@ -528,48 +541,46 @@ steps:
           import 'package:flame/effects.dart';
           import 'package:flame/events.dart';
           import 'package:flutter/material.dart';
-          
+
           import '../brick_breaker.dart';
-          
+
           class Bat extends PositionComponent
               with DragCallbacks, HasGameReference<BrickBreaker> {
             Bat({
               required this.cornerRadius,
               required super.position,
               required super.size,
-            }) : super(
-                    anchor: Anchor.center,
-                    children: [RectangleHitbox()],
-                  );
-          
+            }) : super(anchor: Anchor.center, children: [RectangleHitbox()]);
+
             final Radius cornerRadius;
-          
-            final _paint = Paint()
-              ..color = const Color(0xff1e6091)
-              ..style = PaintingStyle.fill;
-          
+
+            final _paint =
+                Paint()
+                  ..color = const Color(0xff1e6091)
+                  ..style = PaintingStyle.fill;
+
             @override
             void render(Canvas canvas) {
               super.render(canvas);
               canvas.drawRRect(
-                  RRect.fromRectAndRadius(
-                    Offset.zero & size.toSize(),
-                    cornerRadius,
-                  ),
-                  _paint);
+                RRect.fromRectAndRadius(Offset.zero & size.toSize(), cornerRadius),
+                _paint,
+              );
             }
-          
+
             @override
             void onDragUpdate(DragUpdateEvent event) {
               super.onDragUpdate(event);
               position.x = (position.x + event.localDelta.x).clamp(0, game.width);
             }
-          
+
             void moveBy(double dx) {
-              add(MoveToEffect(
-                Vector2((position.x + dx).clamp(0, game.width), position.y),
-                EffectController(duration: 0.1),
-              ));
+              add(
+                MoveToEffect(
+                  Vector2((position.x + dx).clamp(0, game.width), position.y),
+                  EffectController(duration: 0.1),
+                ),
+              );
             }
           }
       - name: Copy step_07
